tests/errors/multiple_values_for_argument.py
# expect_error: multiple values for argument
def add(a, b):
    return a + b

print(add(1, a=2))